@@ -1,5 +1,13 @@
 2001-08-06 Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c (get_process_name): new function to get the name.
+	Will try to get name from arguments string.
+
+	* interface.c (popup_menu...): declare them as static functions
+	because, well.., that's what they are.
+
+2001-08-06 Kevin Vandersloot <kfv101@psu.edu>
+
 	* Makefile.am: add procactions.c procactions.h
 
 	* procactions.[c,h]: new file to deal with process actions
